--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "graphql": "^14.6.0",
-    "mongodb": "^3.5.5"
+    "mongodb": "^3.5.5",
+    "path": "^0.12.7"
   }
 }
