--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^2.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-relay": "^9.0.0",
     "relay-compiler": "^9.0.0",
     "relay-config": "^9.0.0"
   },
