--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "description": "JAMBU Front-End Directory",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack && node ../server/src/index.js",
+    "start": "webpack & nodemon ../server/src/index.js --watch ../server/src",
     "test": "test",
     "dev": "webpack-dev-server",
     "relay": "relay-compiler --src ./src --schema ./data/schema.graphql"
@@ -23,7 +23,6 @@
   "dependencies": {
     "babel-plugin-relay": "^9.0.0",
     "graphql": "^15.0.0",
-    "nodemon": "^2.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-relay": "^9.0.0",
