Implement Semantic UI

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,9 @@ node_modules
 # bundles
 client/public/bundle.js
 
+# fonts and images
+client/public/fonts
+client/public/images
+
 # graphql generations
 **/__generated__/**
