--- a/client/package.json
+++ b/client/package.json
@@ -27,14 +27,19 @@
     "react-dom": "^16.13.1",
     "react-relay": "^9.0.0",
     "relay-compiler": "^9.0.0",
-    "relay-config": "^9.0.0"
+    "relay-config": "^9.0.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
+    "css-loader": "^3.5.2",
+    "file-loader": "^6.0.0",
     "nodemon": "^2.0.2",
+    "style-loader": "^1.1.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
